6.0.2

6.0.1
New-AadAppsForBC doesn't work with the newer versions of Microsoft.Graph module (where the type of the accesstoken parameter has changed)
New-AppSourceSubmission has a new parameter -doNotUpdateVersionNumber to support hotfixes in AppSource for earlier versions
New-AppSourceSubmission obsoleted parameter -doNotCheckVersionNumber that was previously used for hotfixes, because of a change in AppSource
Issue 3219 Run-AlValidation cannot validate against Next Major without an insider Sas token
Do not attempt to call Get-BcContainerAppInfo if we are using filesonly containers in Run-AlPipeline
Do not attempt to download unknown symbols from filesonly containers
Add parameter generateErrorLog to Compile-AppInNavContainer
Issue 3229 Add parameter replaceVersionNumber to Replace-DependenciesInAppFile

6.0.0
Add parameter -accept_insiderEULA on New-BcContainer, Get-BcArtifactUrl and Run-AlPipeline to accept the insider EULA (https://go.microsoft.com/fwlink/?linkid=2245051) instead of using the insider SAS token.
The insider SAS token is still supported until April 2024 where the last insider SAS token will expire...
Remove the need for Insider SAS token in Create Container wizard and Create AL-Go repo wizard
Add parameter EnableExternalRulesets to Run-AlPipeline (which will be added to the compiler when compiling)
Add paramater generateErrorLog to Compile-AppInNavContainer

5.0.7
Run-AlValidation also needs to install NAVSIP dependencies (issue #3190)
Performance problems when getting application information in Compile-AppWithCompilerFolder

5.0.6
Add switch "doNotGetCompanyInfo" to "New-BcEnvironment" to enable skipping getting environment information after environment creation.
Issue #3151 Get-AppSourceProduct returns 404 Not Found
Add parameters exclusiveAccessTicket, path, syncMode, force and skipVersionCheck to Start-BcContainerAppDataUpgrade.
Issue #3146 Publish-BcContainerApp not working headless
Issue #3190 Sign-Tool stopped working in 23.0.12034.12480
